# bunkerbox

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  kilo.conf  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
demo/crush/: crush  run-demo.sh
demo/kilocode/: run-demo.sh
demo/netdebug/: run-demo.sh
demo/opencode/: run-demo.sh
docs/: concepts.md  index.md  quickstart.md
docs/config/: hooks.md  image.md  project.md  runtime.md
docs/guides/: custom-images.md  networking.md  packaging.md  passthrough.md  persistence.md  profiles.md  tutorial.md
docs/reference/: cli.md  config-schema.md  makefile.md
images/: README.md  crush.conf  kilocode.conf  opencode.conf
profiles/: go.yaml  make.yaml  node.yaml  python.yaml  rust.yaml
runtime/: opencode.conf
src/: cfg.rs  cfg_ut.rs  cfgsetup.rs  cleanup.rs  clidef.rs  cmdrun.rs  commands.yaml  daemon.rs  envconf.rs  envconf_ut.rs  kata.rs  lib.rs  main.rs  overlay.rs  proxy.rs  proxy_ut.rs  runtime.rs  sandbox.rs  sandbox_ut.rs  tui.rs  workspace.rs
src/sandbox/: exec.rs  mod.rs  mount.rs  ns.rs
src/ui/: mod.rs  tui.rs
src/vscomm/: mod.rs
src/vscomm/buildsys/: cargo.rs  cmake.rs  gnumake.rs  go.rs  gradle.rs  maven.rs  meson.rs  mod.rs  npm.rs  python.rs  ut.rs
tests/: test_base.rs  test_proxy.rs  test_sandbox.rs
tests/common/: mod.rs
