[package]
name = "bunkerbox"
version = "0.2.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
clap = "4"
colored = "3"
glob = "0.3"
libc = "0.2"
pbkdf2 = "0.12"
rand = "0.8"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "io-util", "process"] }
tokio-vsock = "0.7"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "bunkerbox"
path = "src/main.rs"

[[bin]]
name = "bunkerbox-vscomm"
path = "src/bin/bunkerbox-vscomm.rs"
